# xloci

./: LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
assets/: xloci.Dockerfile
xloci/: Cargo.toml
xloci/src/: cli.rs  consts.rs  core.rs  lib.rs  main.rs
xloci/tests/: io_matrix.rs
